_infra/core/manifests/todo-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoweb
spec:
  tls:
    - hosts:
        - todo.jobico.org
      secretName: certs-secret
  rules:
    - host: todo.jobico.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoweb
                port:
                  number: 3000
